--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,6 +22,13 @@ jobs:
     timeout-minutes: 5
     
     steps:
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # Generuje węża (wersja svg-only zalecana przez autora do README)
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
