--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,18 +1,19 @@
-name: Generate Snake
+name: generate animation
 
 on:
-  # Uruchamiaj automatycznie co 24h o północy
+  # run automatically every 24 hours
   schedule:
-    - cron: "0 0 * * *" 
+    - cron: "0 */24 * * *" 
   
-  # Pozwala na ręczne uruchomienie z zakładki Actions
+  # allows to manually run the job at any time
   workflow_dispatch:
   
-  # Uruchamiaj przy każdym pushu na główną gałąź
+  # run on every push on the master branch
   push:
     branches:
     - master
-    - main
+    
+  
 
 jobs:
   generate:
@@ -22,14 +23,7 @@ jobs:
     timeout-minutes: 5
     
     steps:
-      - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # Generuje węża (wersja svg-only zalecana przez autora do README)
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
@@ -37,12 +31,12 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
-      # Wysyła wygenerowane pliki na gałąź "output"
+          
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
       - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/gh-action-github-pages@v3.1.0
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
