--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,8 +1,9 @@
+# Visit https://github.com/lowlighter/metrics#-documentation for full reference
 name: Metrics
 on:
-  # Aktualizuj co godzinę
+  # Schedule updates (each hour)
   schedule: [{cron: "0 * * * *"}]
-  # Pozwól na ręczne uruchomienie
+  # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: {branches: ["master", "main"]}
 jobs:
@@ -13,15 +14,31 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          # Token
+          # Your GitHub token
+          # The following scopes are required:
+          #  - public_access (default scope)
+          # The following additional scopes may be required:
+          #  - read:org      (for organization related metrics)
+          #  - read:user     (for user related data)
+          #  - read:packages (for some packages related data)
+          #  - repo          (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
 
-          # Podstawowe opcje
+          # Options
           user: DominikPalacz
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/Warsaw
-          
-          # ZAMIANA: Usunięto zepsuty Skyline, dodano Isocalendar (zielone klocki 3D)
-          plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
+          plugin_skyline: yes
+          plugin_skyline_compatibility: yes
+          plugin_skyline_frames: 60
+          plugin_skyline_quality: 0.5
+          plugin_skyline_settings: |
+            {
+              "url": "https://skyline.github.com/${login}/${year}",
+              "ready": "[...document.querySelectorAll('span')].map(span => span.innerText).includes('Share on Twitter')",
+              "wait": 1,
+              "hide": "button, footer, a"
+            }
+
+          plugin_skyline_year: 2026
